# JNI

app/: build.gradle
app/src/androidTest/java/com/demo/jni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dynamic_register.cpp  native-lib.cpp
app/src/main/java/com/demo/jni/: DynamicRegisterActivity.java  JniCallJavaActivity.java  MainActivity.java
app/src/main/java/com/demo/jni/model/: UserModel.java
app/src/main/jni/: native-lib.c
app/src/main/res/layout/: activity_dynamic_register.xml  activity_jni_call_java.xml  activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
